<resources>
    <string name="app_name">Workmeter</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="site_list">Site List</string>

    <!-- content descriptions -->
    <string name="desc_add_worksheet">Add worksheet</string>
    <string name="desc_select_drawing">Select a drawing</string>

    <!-- texts -->
    <string name="text_seal">Seal</string>
    <string name="text_drawing">Drawing</string>

    <string name="label_login">Login</string>
    <string name="label_worksheet">Worksheet</string>

    <!-- SealTab form -->
    <string name="text_date">Date</string>
    <string name="text_seal_number">Seal Number</string>
    <string name="text_location">Location</string>
    <string name="seal_tab_text_drawing">@string/text_drawing</string>
    <string name="seal_tab_location_hint">Enter location</string>
    <string name="seal_tab_label_size">Size</string>
    <string name="seal_tab_height_hint">Height</string>
    <string name="seal_tab_width_hint">Width</string>
    <string name="text_photos">Photos</string>
    <string name="seal_tab_cam_desc">Take a picture</string>
    <string name="seal_tab_phone_desc">Load a photo from phone gallery</string>

    <string name="title_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="take_photo">Take photo</string>
    <string name="worksheet_photo_description">Worksheet photo</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="desc_confirm_photo">Confirm photo</string>
    <string name="desc_resume_camera">Resume Camera</string>
    <string name="desc_close_camera">Close Camera</string>
    <string name="update_desc">Update</string>
    <string name="schedule_work_desc">Schedule work</string>
    <string name="update">UPDATE</string>
    <string name="schedule_work_text">SCHEDULE WORK</string>
</resources>